--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -85,6 +85,7 @@ x-airflow-common:
     # AIRFLOW_VAR_{VARIABLE_NAME}
     AIRFLOW_VAR_API_KEY: ${API_KEY}
     AIRFLOW_VAR_CHANNEL_HANDLE: ${CHANNEL_HANDLE}
+    AIRFLOW_VAR_BASE_URL: ${BASE_URL}
     # Postgres databases environment variables - Needed for integration and data quality tests
     ELT_DATABASE_NAME: ${ELT_DATABASE_NAME}
     ELT_DATABASE_USERNAME: ${ELT_DATABASE_USERNAME}
@@ -159,7 +160,7 @@ services:
  
   airflow-webserver:
     <<: *airflow-common
-    command: webserver
+    command: api-server
     container_name: airflow-webserver
     ports:
       - "8080:8080"
@@ -175,6 +176,17 @@ services:
       airflow-init:
         condition: service_completed_successfully
  
+  airflow-dag-processor:
+    <<: *airflow-common
+    command: dag-processor
+    container_name: airflow-dag-processor
+    restart: always
+    depends_on:
+      <<: *airflow-common-depends-on
+      airflow-init:
+          condition: service_completed_successfully
+
+
   airflow-scheduler:
     <<: *airflow-common
     command: scheduler
